--- a/style.css
+++ b/style.css
@@ -87,7 +87,9 @@ table {
 .container-fluid{
    background-color: #f6f6f6;
    min-height: 100vh;
-   font-family: 'Montserrat'
+   font-family: 'Montserrat';
+   position: relative;
+   padding-bottom: 50px;
 }
 .main-content{
     text-align: center;
@@ -125,22 +127,24 @@ table {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     cursor: pointer;
     margin-top: 10px;
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+     -ms-transition: all 0.5s ease-out;
+      -o-transition: all 0.5s ease-out;
+         transition: all 0.5s ease-out;
 }
 .main-content .displayCards .inner:hover{
     margin-top: 0px;
+}
+.inner .hover-text{
     -webkit-transition: all 0.5s ease-out;
     -moz-transition: all 0.5s ease-out;
      -ms-transition: all 0.5s ease-out;
       -o-transition: all 0.5s ease-out;
          transition: all 0.5s ease-out;
 }
-.inner:hover .hover-text{
+.main-content .displayCards .inner:hover .hover-text{
     opacity: 1;
-    -webkit-transition: all 0.5s ease-out;
-    -moz-transition: all 0.5s ease-out;
-     -ms-transition: all 0.5s ease-out;
-      -o-transition: all 0.5s ease-out;
-         transition: all 0.5s ease-out;
 }
 .main-content .displayCards .iconCircle{
     border: 3px solid;
